fix mobile view

--- a/src/Main.css
+++ b/src/Main.css
@@ -105,6 +105,11 @@
   height: 200px;
 }
 
+.porto__web__detail {
+  padding-left: 0px !important;
+  padding-right: 0px !important;
+}
+
 @media only screen and (max-width: 600px) {
   .body {
     padding: 0px 20px;
